@@ -18,8 +18,9 @@ SHORT TERM STUFF (this section should always be empty in a release version!)
 
 - ap_log_error -> ap_log_rerror
 
+- Apache::Constants :override :args_how
+
 - PerlInitHandler - alias to first available
-  PerlCleanupHandler - register_cleanup
 
 - make 'make test_report' more useful
 
